[package]
name = "smart-meter"
version = "0.1.0"
authors = ["Philipp Scheff <philippscheff@me.com>"]
edition = "2021"
description = "Library for smart meter devices."
readme = "README.md"
repository = "https://github.com/schphil/smart-meter"
license = "MIT OR Apache-2.0"
keywords = ["smart meter", "smart home"]
exclude = [
    ".embuild",
    ".github",
    "examples",
    ".gitignore",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "rustfmt.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
serde_default = ["serde/default"]
default = [
    "std",
    "bytes",
    "env_logger",
    "futures",
    "log",
    "serde_default",
    "thiserror",
    "tokio",
    "tokio-serial",
    "tokio-util",
]
esp_std = ["std", "bytes", "esp-idf-hal", "esp-idf-sys","serde_default", "thiserror"]
esp = [
    "critical-section",
    "esp-backtrace",
    "esp32c3-hal",
    "esp-println",
    "heapless",
    "nb",
    "serde",
    "thiserror-no-std",
]
esp_example = ["embedded-io", "embedded-svc", "log", "riscv-rt"]

[dependencies]
log = { version = "0.4", optional = true }

# std
bytes = { version = "1.3.0", optional = true }
thiserror = { version = "1.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

# default
env_logger = { version = "0.9", optional = true }
futures = { version = "0.3.25", optional = true }
tokio = { version = "1.21.2", features = ["full"], optional = true }
tokio-serial = { version = "5.4.1", optional = true }
tokio-util = { version = "0.7.4", features = ["codec"], optional = true }

# riscv_std
esp-idf-hal = { version = "0.40.1", optional = true }
esp-idf-sys = { version = "0.32.1", features = ["binstart"], optional = true }

# riscv
critical-section = { version = "1.1.1", optional = true }
embedded-io = { version = "0.3", default-features = false, optional = true }
embedded-svc = { version = "0.23.1", default-features = false, features = [], optional = true }
esp-backtrace = { version = "0.4.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
], optional = true }
esp32c3-hal = { version = "0.4.0", optional = true }
esp-println = { git = "https://github.com/esp-rs/esp-println.git", features = [
    "esp32c3",
    "log",
], rev = "fc4e9cf", optional = true }
heapless = { version = "0.7.14", default-features = false, optional = true }
nb = { version = "1.0.0", optional = true }
riscv-rt = { version = "0.10", optional = true }
thiserror-no-std = { version = "2.0.2", optional = true }

[[example]]
name = "landisgyrt550"
required-features = ["default"]

[[example]]
name = "landisgyrt550_esp_std"
required-features = ["esp_std"]

[[example]]
name = "landisgyrt550_esp"
required-features = ["esp", "esp_example"]

[build-dependencies]
embuild = "0.30.4"
